Добавлен первый заказ

--- a/onsharp-copy/index.html
+++ b/onsharp-copy/index.html
@@ -21,7 +21,7 @@
     <div class="container-xl">
         <div class="row">
             <nav class="navbar navbar-expand-xl p-0 w-100">
-                <div class="col-md-3 pl-0">
+                <div class="col-md-3 col-3 pl-0">
                     <a class="navbar-brand p-0" href="#">
                         <img src="img/onsharp-logo-min.png" alt="Onsharp" width="300" height="73" class="header-logo">
                     </a>
@@ -59,26 +59,57 @@
                 <div class="col-12 p-0">
                     <div id="mobileNavbar" class="collapse navbar-collapse">
                         <ul class="navbar-nav ml-auto">
+
                             <li class="nav-item">
                                 <a class="nav-link mobile-navigation-link" href="#">WHAT WE DO</a>
-                                <a class="mobile-menu-element-expand" data-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1"><i class="fas fa-angle-down"></i></a>
+                                <a class="mobile-menu-element-expand" data-toggle="collapse" href="#multiCollapse_WHAT-WE-DO" role="button" aria-expanded="false" aria-controls="multiCollapse_WHAT-WE-DO"><i class="fas fa-angle-down"></i></a>
                             </li>
+                            <div class="collapse multi-collapse" id="multiCollapse_WHAT-WE-DO">
+                                <div class="card card-body">
+                                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                                </div>
+                            </div>
+
                             <li class="nav-item">
                                 <a class="nav-link mobile-navigation-link" href="#">WHO WE SERVE</a>
-                                <a class="mobile-menu-element-expand" data-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1"><i class="fas fa-angle-down"></i></a>
+                                <a class="mobile-menu-element-expand" data-toggle="collapse" href="#multiCollapse_WHO-WE-SERVE" role="button" aria-expanded="false" aria-controls="multiCollapse_WHO-WE-SERVE"><i class="fas fa-angle-down"></i></a>
                             </li>
+                            <div class="collapse multi-collapse" id="multiCollapse_WHO-WE-SERVE">
+                                <div class="card card-body">
+                                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                                </div>
+                            </div>
+
                             <li class="nav-item">
                                 <a class="nav-link mobile-navigation-link" href="#">OUR WORK</a>
-                                <a class="mobile-menu-element-expand" data-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1"><i class="fas fa-angle-down"></i></a>
+                                <a class="mobile-menu-element-expand" data-toggle="collapse" href="#multiCollapse_OUR-WORK" role="button" aria-expanded="false" aria-controls="multiCollapse_OUR-WORK"><i class="fas fa-angle-down"></i></a>
                             </li>
+                            <div class="collapse multi-collapse" id="multiCollapse_OUR-WORK">
+                                <div class="card card-body">
+                                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                                </div>
+                            </div>
+
                             <li class="nav-item">
                                 <a class="nav-link mobile-navigation-link" href="#">ABOUT</a>
-                                <a class="mobile-menu-element-expand" data-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1"><i class="fas fa-angle-down"></i></a>
+                                <a class="mobile-menu-element-expand" data-toggle="collapse" href="#multiCollapseABOUT" role="button" aria-expanded="false" aria-controls="multiCollapseABOUT"><i class="fas fa-angle-down"></i></a>
                             </li>
+                            <div class="collapse multi-collapse" id="multiCollapseABOUT">
+                                <div class="card card-body">
+                                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                                </div>
+                            </div>
+
                             <li class="nav-item">
                                 <a class="nav-link mobile-navigation-link" href="#">RESOURCES</a>
-                                <a class="mobile-menu-element-expand" data-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1"><i class="fas fa-angle-down"></i></a>
+                                <a class="mobile-menu-element-expand" data-toggle="collapse" href="#multiCollapseRESOURCES" role="button" aria-expanded="false" aria-controls="multiCollapseRESOURCES"><i class="fas fa-angle-down"></i></a>
                             </li>
+                            <div class="collapse multi-collapse" id="multiCollapseRESOURCES">
+                                <div class="card card-body">
+                                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                                </div>
+                            </div>
+
                             <li class="nav-item">
                                 <a class="nav-link mobile-navigation-link" href="#">WORK WITH US</a>
                             </li>
