Добавлен первый заказ

--- a/onsharp-copy/index.html
+++ b/onsharp-copy/index.html
@@ -64,50 +64,190 @@
                                 <a class="nav-link mobile-navigation-link" href="#">WHAT WE DO</a>
                                 <a class="mobile-menu-element-expand" data-toggle="collapse" href="#multiCollapse_WHAT-WE-DO" role="button" aria-expanded="false" aria-controls="multiCollapse_WHAT-WE-DO"><i class="fas fa-angle-down"></i></a>
                             </li>
-                            <div class="collapse multi-collapse" id="multiCollapse_WHAT-WE-DO">
-                                <div class="card card-body">
-                                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-                                </div>
+                            <div class="collapse multi-collapse sub-navbar" id="multiCollapse_WHAT-WE-DO">
+                                <ul class="card card-body">
+                                    <li class="sub-mobile-navbar-item">
+                                        <a href="#" class="mobile-navigation-link">
+                                            App & Software Development
+                                        </a>
+                                    </li>
+                                    <li class="sub-mobile-navbar-item">
+                                        <a href="#" class="mobile-navigation-link">
+                                            HubSpot Integrations
+                                        </a>
+                                    </li>
+                                    <li class="sub-mobile-navbar-item">
+                                        <a href="#" class="mobile-navigation-link">
+                                            Web Design
+                                        </a>
+                                    </li>
+                                    <li class="sub-mobile-navbar-item">
+                                        <a href="#" class="mobile-navigation-link">
+                                            Web Hosting
+                                        </a>
+                                    </li>
+                                    <li class="sub-mobile-navbar-item">
+                                        <a href="#" class="mobile-navigation-link">
+                                            Web Photo & Video
+                                        </a>
+                                    </li>
+                                </ul>
                             </div>
 
                             <li class="nav-item">
                                 <a class="nav-link mobile-navigation-link" href="#">WHO WE SERVE</a>
                                 <a class="mobile-menu-element-expand" data-toggle="collapse" href="#multiCollapse_WHO-WE-SERVE" role="button" aria-expanded="false" aria-controls="multiCollapse_WHO-WE-SERVE"><i class="fas fa-angle-down"></i></a>
                             </li>
-                            <div class="collapse multi-collapse" id="multiCollapse_WHO-WE-SERVE">
-                                <div class="card card-body">
-                                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-                                </div>
+                            <div class="collapse multi-collapse sub-navbar" id="multiCollapse_WHO-WE-SERVE">
+                                <ul class="card card-body">
+                                    <li class="sub-mobile-navbar-item">
+                                        <a href="#" class="mobile-navigation-link">
+                                            Agriculture
+                                        </a>
+                                    </li>
+                                    <li class="sub-mobile-navbar-item">
+                                        <a href="#" class="mobile-navigation-link">
+                                            Banking & Finance
+                                        </a>
+                                    </li>
+                                    <li class="sub-mobile-navbar-item">
+                                        <a href="#" class="mobile-navigation-link">
+                                            Construction
+                                        </a>
+                                    </li>
+                                    <li class="sub-mobile-navbar-item">
+                                        <a href="#" class="mobile-navigation-link">
+                                            Engineering
+                                        </a>
+                                    </li>
+                                    <li class="sub-mobile-navbar-item">
+                                        <a href="#" class="mobile-navigation-link">
+                                            Healthcare
+                                        </a>
+                                    </li>
+                                    <li class="sub-mobile-navbar-item">
+                                        <a href="#" class="mobile-navigation-link">
+                                            Manufacturing
+                                        </a>
+                                    </li>
+                                    <li class="sub-mobile-navbar-item">
+                                        <a href="#" class="mobile-navigation-link">
+                                            Real Estate
+                                        </a>
+                                    </li>
+                                    <li class="sub-mobile-navbar-item">
+                                        <a href="#" class="mobile-navigation-link">
+                                            Transportation & Logistics
+                                        </a>
+                                    </li>
+                                    <li class="sub-mobile-navbar-item">
+                                        <a href="#" class="mobile-navigation-link">
+                                            Utilities
+                                        </a>
+                                    </li>
+                                </ul>
                             </div>
 
                             <li class="nav-item">
                                 <a class="nav-link mobile-navigation-link" href="#">OUR WORK</a>
                                 <a class="mobile-menu-element-expand" data-toggle="collapse" href="#multiCollapse_OUR-WORK" role="button" aria-expanded="false" aria-controls="multiCollapse_OUR-WORK"><i class="fas fa-angle-down"></i></a>
                             </li>
-                            <div class="collapse multi-collapse" id="multiCollapse_OUR-WORK">
-                                <div class="card card-body">
-                                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-                                </div>
+                            <div class="collapse multi-collapse sub-navbar" id="multiCollapse_OUR-WORK">
+                                <ul class="card card-body">
+                                    <li class="sub-mobile-navbar-item">
+                                        <a href="#" class="mobile-navigation-link">
+                                            App & Software Development
+                                        </a>
+                                    </li>
+                                    <li class="sub-mobile-navbar-item">
+                                        <a href="#" class="mobile-navigation-link">
+                                            HubSpot Integrations
+                                        </a>
+                                    </li>
+                                    <li class="sub-mobile-navbar-item">
+                                        <a href="#" class="mobile-navigation-link">
+                                            Web Design
+                                        </a>
+                                    </li>
+                                    <li class="sub-mobile-navbar-item">
+                                        <a href="#" class="mobile-navigation-link">
+                                            Web Hosting
+                                        </a>
+                                    </li>
+                                    <li class="sub-mobile-navbar-item">
+                                        <a href="#" class="mobile-navigation-link">
+                                            Web Photo & Video
+                                        </a>
+                                    </li>
+                                </ul>
                             </div>
 
                             <li class="nav-item">
                                 <a class="nav-link mobile-navigation-link" href="#">ABOUT</a>
                                 <a class="mobile-menu-element-expand" data-toggle="collapse" href="#multiCollapseABOUT" role="button" aria-expanded="false" aria-controls="multiCollapseABOUT"><i class="fas fa-angle-down"></i></a>
                             </li>
-                            <div class="collapse multi-collapse" id="multiCollapseABOUT">
-                                <div class="card card-body">
-                                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-                                </div>
+                            <div class="collapse multi-collapse sub-navbar" id="multiCollapseABOUT">
+                                <ul class="card card-body">
+                                    <li class="sub-mobile-navbar-item">
+                                        <a href="#" class="mobile-navigation-link">
+                                            App & Software Development
+                                        </a>
+                                    </li>
+                                    <li class="sub-mobile-navbar-item">
+                                        <a href="#" class="mobile-navigation-link">
+                                            HubSpot Integrations
+                                        </a>
+                                    </li>
+                                    <li class="sub-mobile-navbar-item">
+                                        <a href="#" class="mobile-navigation-link">
+                                            Web Design
+                                        </a>
+                                    </li>
+                                    <li class="sub-mobile-navbar-item">
+                                        <a href="#" class="mobile-navigation-link">
+                                            Web Hosting
+                                        </a>
+                                    </li>
+                                    <li class="sub-mobile-navbar-item">
+                                        <a href="#" class="mobile-navigation-link">
+                                            Web Photo & Video
+                                        </a>
+                                    </li>
+                                </ul>
                             </div>
 
                             <li class="nav-item">
                                 <a class="nav-link mobile-navigation-link" href="#">RESOURCES</a>
                                 <a class="mobile-menu-element-expand" data-toggle="collapse" href="#multiCollapseRESOURCES" role="button" aria-expanded="false" aria-controls="multiCollapseRESOURCES"><i class="fas fa-angle-down"></i></a>
                             </li>
-                            <div class="collapse multi-collapse" id="multiCollapseRESOURCES">
-                                <div class="card card-body">
-                                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-                                </div>
+                            <div class="collapse multi-collapse sub-navbar" id="multiCollapseRESOURCES">
+                                <ul class="card card-body">
+                                    <li class="sub-mobile-navbar-item">
+                                        <a href="#" class="mobile-navigation-link">
+                                            App & Software Development
+                                        </a>
+                                    </li>
+                                    <li class="sub-mobile-navbar-item">
+                                        <a href="#" class="mobile-navigation-link">
+                                            HubSpot Integrations
+                                        </a>
+                                    </li>
+                                    <li class="sub-mobile-navbar-item">
+                                        <a href="#" class="mobile-navigation-link">
+                                            Web Design
+                                        </a>
+                                    </li>
+                                    <li class="sub-mobile-navbar-item">
+                                        <a href="#" class="mobile-navigation-link">
+                                            Web Hosting
+                                        </a>
+                                    </li>
+                                    <li class="sub-mobile-navbar-item">
+                                        <a href="#" class="mobile-navigation-link">
+                                            Web Photo & Video
+                                        </a>
+                                    </li>
+                                </ul>
                             </div>
 
                             <li class="nav-item">
