Добавлен первый заказ

--- a/onsharp-copy/index.html
+++ b/onsharp-copy/index.html
@@ -36,19 +36,164 @@
                         <ul class="navbar-nav ml-auto align-items-center">
                             <li class="nav-item">
                                 <a class="nav-link main-navigation-link" href="#">WHAT WE DO</a>
+                                <div id="desktop-navbar_WHAT-WE-DO" class="desktop-sub-navbar sub-navbar">
+                                    <ul>
+                                        <li class="sub-mobile-navbar-item">
+                                            <a href="#" class="mobile-navigation-link">
+                                                App & Software Development
+                                            </a>
+                                        </li>
+                                        <li class="sub-mobile-navbar-item">
+                                            <a href="#" class="mobile-navigation-link">
+                                                HubSpot Integrations
+                                            </a>
+                                        </li>
+                                        <li class="sub-mobile-navbar-item">
+                                            <a href="#" class="mobile-navigation-link">
+                                                Web Design
+                                            </a>
+                                        </li>
+                                        <li class="sub-mobile-navbar-item">
+                                            <a href="#" class="mobile-navigation-link">
+                                                Web Hosting
+                                            </a>
+                                        </li>
+                                        <li class="sub-mobile-navbar-item">
+                                            <a href="#" class="mobile-navigation-link">
+                                                Web Photo & Video
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
                             </li>
+
                             <li class="nav-item">
                                 <a class="nav-link main-navigation-link" href="#">WHO WE SERVE</a>
+                                <div id="desktop-navbar_WHO-WE-SERVE" class="desktop-sub-navbar sub-navbar">
+                                    <ul>
+                                        <li class="sub-mobile-navbar-item">
+                                            <a href="#" class="mobile-navigation-link">
+                                                Agriculture
+                                            </a>
+                                        </li>
+                                        <li class="sub-mobile-navbar-item">
+                                            <a href="#" class="mobile-navigation-link">
+                                                Banking & Finance
+                                            </a>
+                                        </li>
+                                        <li class="sub-mobile-navbar-item">
+                                            <a href="#" class="mobile-navigation-link">
+                                                Construction
+                                            </a>
+                                        </li>
+                                        <li class="sub-mobile-navbar-item">
+                                            <a href="#" class="mobile-navigation-link">
+                                                Engineering
+                                            </a>
+                                        </li>
+                                        <li class="sub-mobile-navbar-item">
+                                            <a href="#" class="mobile-navigation-link">
+                                                Healthcare
+                                            </a>
+                                        </li>
+                                        <li class="sub-mobile-navbar-item">
+                                            <a href="#" class="mobile-navigation-link">
+                                                Manufacturing
+                                            </a>
+                                        </li>
+                                        <li class="sub-mobile-navbar-item">
+                                            <a href="#" class="mobile-navigation-link">
+                                                Real Estate
+                                            </a>
+                                        </li>
+                                        <li class="sub-mobile-navbar-item">
+                                            <a href="#" class="mobile-navigation-link">
+                                                Transportation & Logistics
+                                            </a>
+                                        </li>
+                                        <li class="sub-mobile-navbar-item">
+                                            <a href="#" class="mobile-navigation-link">
+                                                Utilities
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
                             </li>
+
                             <li class="nav-item">
                                 <a class="nav-link main-navigation-link" href="#">OUR WORK</a>
+                                <div id="desktop-navbar_OUR-WORK" class="desktop-sub-navbar sub-navbar">
+                                    <ul>
+                                        <li class="sub-mobile-navbar-item">
+                                            <a href="#" class="mobile-navigation-link">
+                                                Websites
+                                            </a>
+                                        </li>
+                                        <li class="sub-mobile-navbar-item">
+                                            <a href="#" class="mobile-navigation-link">
+                                                Apps & Software
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
                             </li>
+
                             <li class="nav-item">
                                 <a class="nav-link main-navigation-link" href="#">ABOUT</a>
+                                <div id="desktop-navbar_ABOUT" class="desktop-sub-navbar sub-navbar">
+                                    <ul>
+                                        <li class="sub-mobile-navbar-item">
+                                            <a href="#" class="mobile-navigation-link">
+                                                Our Story
+                                            </a>
+                                        </li>
+                                        <li class="sub-mobile-navbar-item">
+                                            <a href="#" class="mobile-navigation-link">
+                                                Leadership
+                                            </a>
+                                        </li>
+                                        <li class="sub-mobile-navbar-item">
+                                            <a href="#" class="mobile-navigation-link">
+                                                Join Our Team
+                                            </a>
+                                        </li>
+                                        <li class="sub-mobile-navbar-item">
+                                            <a href="#" class="mobile-navigation-link">
+                                                Referral Partner Program
+                                            </a>
+                                        </li>
+                                        <li class="sub-mobile-navbar-item">
+                                            <a href="#" class="mobile-navigation-link">
+                                                In The Community
+                                            </a>
+                                        </li>
+                                        <li class="sub-mobile-navbar-item">
+                                            <a href="#" class="mobile-navigation-link">
+                                                Contact Us
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
                             </li>
+
                             <li class="nav-item">
                                 <a class="nav-link main-navigation-link" href="#">RESOURCES</a>
+                                <div id="desktop-navbar_RESOURCES" class="desktop-sub-navbar sub-navbar">
+                                    <ul>
+                                        <li class="sub-mobile-navbar-item">
+                                            <a href="#" class="mobile-navigation-link">
+                                                Our Blog
+                                            </a>
+                                        </li>
+                                        <li class="sub-mobile-navbar-item">
+                                            <a href="#" class="mobile-navigation-link">
+                                                Our Newsletter
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
                             </li>
+
                             <li class="nav-item">
                                 <a class="nav-link main-navigation-link main-button" href="#">WORK WITH US</a>
                             </li>
@@ -156,27 +301,12 @@
                                 <ul class="card card-body">
                                     <li class="sub-mobile-navbar-item">
                                         <a href="#" class="mobile-navigation-link">
-                                            App & Software Development
+                                            Websites
                                         </a>
                                     </li>
                                     <li class="sub-mobile-navbar-item">
                                         <a href="#" class="mobile-navigation-link">
-                                            HubSpot Integrations
-                                        </a>
-                                    </li>
-                                    <li class="sub-mobile-navbar-item">
-                                        <a href="#" class="mobile-navigation-link">
-                                            Web Design
-                                        </a>
-                                    </li>
-                                    <li class="sub-mobile-navbar-item">
-                                        <a href="#" class="mobile-navigation-link">
-                                            Web Hosting
-                                        </a>
-                                    </li>
-                                    <li class="sub-mobile-navbar-item">
-                                        <a href="#" class="mobile-navigation-link">
-                                            Web Photo & Video
+                                            Apps & Software
                                         </a>
                                     </li>
                                 </ul>
@@ -190,27 +320,32 @@
                                 <ul class="card card-body">
                                     <li class="sub-mobile-navbar-item">
                                         <a href="#" class="mobile-navigation-link">
-                                            App & Software Development
+                                            Our Story
                                         </a>
                                     </li>
                                     <li class="sub-mobile-navbar-item">
                                         <a href="#" class="mobile-navigation-link">
-                                            HubSpot Integrations
+                                            Leadership
                                         </a>
                                     </li>
                                     <li class="sub-mobile-navbar-item">
                                         <a href="#" class="mobile-navigation-link">
-                                            Web Design
+                                            Join Our Team
                                         </a>
                                     </li>
                                     <li class="sub-mobile-navbar-item">
                                         <a href="#" class="mobile-navigation-link">
-                                            Web Hosting
+                                            Referral Partner Program
                                         </a>
                                     </li>
                                     <li class="sub-mobile-navbar-item">
                                         <a href="#" class="mobile-navigation-link">
-                                            Web Photo & Video
+                                            In The Community
+                                        </a>
+                                    </li>
+                                    <li class="sub-mobile-navbar-item">
+                                        <a href="#" class="mobile-navigation-link">
+                                            Contact Us
                                         </a>
                                     </li>
                                 </ul>
@@ -224,27 +359,12 @@
                                 <ul class="card card-body">
                                     <li class="sub-mobile-navbar-item">
                                         <a href="#" class="mobile-navigation-link">
-                                            App & Software Development
+                                            Our Blog
                                         </a>
                                     </li>
                                     <li class="sub-mobile-navbar-item">
                                         <a href="#" class="mobile-navigation-link">
-                                            HubSpot Integrations
-                                        </a>
-                                    </li>
-                                    <li class="sub-mobile-navbar-item">
-                                        <a href="#" class="mobile-navigation-link">
-                                            Web Design
-                                        </a>
-                                    </li>
-                                    <li class="sub-mobile-navbar-item">
-                                        <a href="#" class="mobile-navigation-link">
-                                            Web Hosting
-                                        </a>
-                                    </li>
-                                    <li class="sub-mobile-navbar-item">
-                                        <a href="#" class="mobile-navigation-link">
-                                            Web Photo & Video
+                                            Our Newsletter
                                         </a>
                                     </li>
                                 </ul>
